# mastermind-console

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  Mastermind.hs  README.md  mastermind-console.cabal
app/: Main.hs
src/: Code.hs  Game.hs  Hint.hs  Lib.hs  Limit.hs  Result.hs  Score.hs  Strict.hs  Utils.hs
test/: LibTest.hs  Spec.hs
