cabal-version:      2.4
name:               mastermind-console
version:            0.1.0.0

extra-source-files:
    CHANGELOG.md
    README.md

executable mastermind-console
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Lib, Game, Code

    -- LANGUAGE extensions used by modules in this package.
    build-depends:    base ^>=4.14.3.0,
                      random
    hs-source-dirs:   app
                      src
    default-language: Haskell2010
