cabal-version:      2.4
name:               mastermind-console
version:            0.1.0.0

extra-source-files:
    CHANGELOG.md
    README.md

executable mastermind-console
    main-is: Main.hs
    other-modules:
        Lib, Game, Code, Strict, Score
    hs-source-dirs:
        app,
        src
    ghc-options:
        -Wall
        -Werror
        -Wcompat
        -Widentities
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -Wno-unused-top-binds
        -Wno-orphans
    build-depends:
        base >=4.7 && <5,
        lens,
        random,
        directory
    default-language: Haskell2010

test-suite mastermind-console-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Game, Code, Lib
    hs-source-dirs:
        test,
        src
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.7 && <5,
        lens,
        HUnit
    default-language: Haskell2010