cabal-version:      2.4
name:               mastermind-console
version:            0.1.0.0

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        Game, Code, Strict, Score, Hint, Limit
    hs-source-dirs:
        src
    build-depends:
        base >=4.7 && <5,
        microlens,
        microlens-th
    default-language: Haskell2010

executable mastermind-console
    main-is: Main.hs
    hs-source-dirs:
        app
    build-depends:
        base,
        microlens,
        random,
        directory,
        mastermind-console
    ghc-options:
        -Wall
        -Werror
        -Wcompat
        -Widentities
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -Wno-unused-top-binds
        -Wno-orphans
    default-language: Haskell2010

test-suite mastermind-console-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs:
        test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base,
        mastermind-console,
        HUnit
    default-language: Haskell2010